fix: filterchip wrap

--- a/packages/raystack/components/data-table/data-table.module.css
+++ b/packages/raystack/components/data-table/data-table.module.css
@@ -238,4 +238,6 @@
 
 .filterContainer {
   flex-wrap: wrap;
+  min-width: 0;
+  flex-shrink: 1;
 }
