--- a/packages/raystack/components/filter-chip/filter-chip.module.css
+++ b/packages/raystack/components/filter-chip/filter-chip.module.css
@@ -7,9 +7,13 @@
   background: var(--rs-color-background-base-primary);
   border-radius: var(--rs-radius-2);
   text-wrap: nowrap;
-  width: fit-content;
-  min-width: min-content;
   overflow: clip;
+  flex-grow: 0;
+  width: fit-content;
+  min-width: 0px;
+  flex-basis: auto;
+  flex-shrink: 1;
+  max-width: 100%;
 }
 
 .chip-default {
@@ -43,6 +47,11 @@
   background: transparent;
   min-height: unset;
   padding: 0;
+  field-sizing: content;
+  max-width: 200px;
+  width: auto;
+  min-width: 50px;
+  flex-shrink: 1;
   text-overflow: ellipsis;
 }
 
